Remove 'hidden' property since it causes some issue on mobile devides

--- a/src/assets/scss/mixins/_layout.scss
+++ b/src/assets/scss/mixins/_layout.scss
@@ -48,15 +48,11 @@
 }
 
 @mixin overflow($orientation: "vertical") {
-    $overflowX: hidden;
-    $overflowY: auto;
+    overflow-y: auto;
 
     @if ($orientation == "horizontal") {
-        $overflowX: auto;
-        $overflowY: hidden;
+        overflow-x: auto;
     }
 
-    overflow-x: $overflowX;
-    overflow-y: $overflowY;
     @include hide-scrollbar;
 }
